--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
 project(visualizer)
 
 # In case of Makefiles if the user does not setup CMAKE_BUILD_TYPE, assume it's Release:
-if (${CMAKE_GENERATOR} MATCHES ".*Makefiles")
-    if("${CMAKE_BUILD_TYPE}" STREQUAL "")
-        set(CMAKE_BUILD_TYPE Release)
-    endif()
-endif()
+#if (${CMAKE_GENERATOR} MATCHES ".*Makefiles")
+#    if("${CMAKE_BUILD_TYPE}" STREQUAL "")
+#        set(CMAKE_BUILD_TYPE Release)
+#    endif()
+#endif()
 
 set  (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
