--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,8 @@ set  (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 find_package (Qt4 REQUIRED)
 
-set  (project_SOURCES main.cpp mainwindow.cpp cifar_reader.cpp linearsvm.cpp aux.cpp linearsoftmax.cpp classifier.cpp)
-set  (project_HEADERS mainwindow.h cifar_reader.h linearsvm.h CMatrix.h CVector.h aux.h linearsoftmax.h classifier.h)
+set  (project_SOURCES main.cpp mainwindow.cpp cifar_reader.cpp linearsvm.cpp aux.cpp linearsoftmax.cpp classifier.cpp simpleneuralnet.cpp)
+set  (project_HEADERS mainwindow.h cifar_reader.h linearsvm.h CMatrix.h CVector.h aux.h linearsoftmax.h classifier.h simpleneuralnet.h)
 set  (project_FORMS   mainwindow.ui)
 
 
