--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,25 @@ set  (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 find_package (Qt4 REQUIRED)
 
-set  (project_SOURCES main.cpp mainwindow.cpp cifar_reader.cpp linearsvm.cpp aux.cpp linearsoftmax.cpp classifier.cpp simpleneuralnet.cpp)
-set  (project_HEADERS mainwindow.h cifar_reader.h linearsvm.h CMatrix.h CVector.h aux.h linearsoftmax.h classifier.h simpleneuralnet.h)
+set  (project_SOURCES main.cpp
+                      mainwindow.cpp
+                      cifar_reader.cpp
+                      linearsvm.cpp
+                      aux.cpp
+                      linearsoftmax.cpp
+                      classifier.cpp
+                      simpleneuralnet.cpp
+                      fisheryatesshuffle.cpp)
+set  (project_HEADERS mainwindow.h
+                      cifar_reader.h
+                      linearsvm.h
+                      CMatrix.h
+                      CVector.h
+                      aux.h
+                      linearsoftmax.h
+                      classifier.h
+                      simpleneuralnet.h
+                      fisheryatesshuffle.h)
 set  (project_FORMS   mainwindow.ui)
 
 
@@ -31,3 +48,5 @@ add_executable  (${PROJECT_NAME} ${project_SOURCES}
                                  ${project_HEADERS_MOC})
 
 target_link_libraries (${PROJECT_NAME} ${QT_LIBRARIES})
+
+add_executable(test_fisheryatesshuffle test_fisheryatesshuffle.cpp fisheryatesshuffle.cpp)
